After Avishai's 1st review.

--- a/main.tex
+++ b/main.tex
@@ -74,7 +74,7 @@ hardware fingerprinting ethernet
   ARINC Specification 429, also named ``Mark 33 Digital Transfer System (DITS)'', is a standard of the avionics industry. It defines a protocol for the communication between avionics system elements over a local area network. First published in 1977 by Aeronautical Radio, Inc. in 1977, it has since become one of the most widely used data bus protocols in commercial aircrafts. The protocol encompasses different layers: from the physical requirements, through the electronic characteristics of the signal, data format and ending with a file transfer technique.
 
   We continue with a short description of those parts of the specifications, which are relevant to this paper.
-  Data is transmitted over a single twisted and shielded pair of wires. It is transmitted one-way from one transmitter to up to 20 receivers over designated ports. Only one transmitter is allowed on the bus - a separate bus is required for each transmitter. The cable shield must be grounded on both ends. Return to Zero bipolar modulation is used. This is tri-level state modulation consisting of ``HI'', ``NULL'' and ``LO'' states. The differential output voltage from line A to line B is $10V \pm 1$ for ``HI'' mode, $0 \pm 0.5$ for ``NULL'' mode and $-10V \pm 1$ for ``LO'' mode. Data is transmitted in words that are 32-bit long. \textcolor{gray}{(Should we go into \href{https://en.wikipedia.org/wiki/ARINC_429#Word_format}{word format})}?. The protocol allows choice of one of two bit rates. Slow, within the range of 12.0 to 14.5 Kbits/sec, and fast, 100 Kbits/sec. The bit rate on a bus is fixed and maintained within \%1.
+  Data is transmitted over a single twisted and shielded pair of wires. It is transmitted one-way from one transmitter to up to 20 receivers over designated ports. Only one transmitter is allowed on the bus - a separate bus is required for each transmitter. The cable shield must be grounded on both ends. Return to Zero bipolar modulation is used. This is tri-level state modulation consisting of ``HI'', ``NULL'' and ``LO'' states. The differential output voltage from line A to line B is $10V \pm 1$ for ``HI'' mode, $0 \pm 0.5$ for ``NULL'' mode and $-10V \pm 1$ for ``LO'' mode. Data is transmitted in words that are 32-bit long. \textcolor{gray}{(Should we go into \href{https://en.wikipedia.org/wiki/ARINC_429\#Word_format}{word format})}?. The protocol allows choice of one of two bit rates. Slow, within the range of 12.0 to 14.5 Kbits/sec, and fast, 100 Kbits/sec. The bit rate on a bus is fixed and maintained within \%1.
   
   MIL-STD-1553 is the military bus standard alternative of ARINC 429.
   
@@ -215,7 +215,7 @@ hardware fingerprinting ethernet
   
   There are several hyper-parameters for the LOF algorithm. For the number of neighbors examined when calculating the LOF, we chose 20. We used the Euclidiean metric for the distance. The threshold on the local outlier factor that defines an anomaly is chosen so 10\% of samples in the \textbf{train-set} are outliers.
   
-  LOF has shown to work better then other algorithms for the task of network intrusion detection\cite{lazarevic2003comparative} \textgray{although on traffic, not on analog signals, and in 2003}. This fact, together with the available scikit-learn python implementation, mad it an appealing choice. Of course, there may be other algorithms that will outperform LOF for this domain. Comparing different anomaly detection algorithms is beyond the scope of this paper.
+  LOF has shown to work better then other algorithms for the task of network intrusion detection\cite{lazarevic2003comparative} \textcolor{gray}{although on traffic, not on analog signals, and in 2003}. This fact, together with the available scikit-learn python implementation, mad it an appealing choice. Of course, there may be other algorithms that will outperform LOF for this domain. Comparing different anomaly detection algorithms is beyond the scope of this paper.
   
 \subsection{Word-Based Anomaly Detection}
   For each segment in the word, a suggestion has been made regarding the authenticity of the word. The number of segments that have been identified as authentic is subjected to a threshold. If it is greater than that threshold, the word is predicted to be authentic, otherwise, it is flagged as an anomaly.
@@ -347,7 +347,7 @@ hardware fingerprinting ethernet
   \end{table}
   
   
-  Figure \ref{fig:tpr_fpr_e1_p1} show the fpr and the tpr as a function of the threshold value for the e1 as a guarded device, with p1 as a receiver. Figure \ref{fig:votes_excalibur_1} shows a different representation of the same data. In blue is 1 - the derivative of the tpr. In orange 1 - the derivative of the fpr. \textgray{(I finally understood that the histogram that we have been looking at are just that. Maybe just plot the standart tpr and fpr? It is much easier to explain.)}
+  Figure \ref{fig:tpr_fpr_e1_p1} show the fpr and the tpr as a function of the threshold value for the e1 as a guarded device, with p1 as a receiver. Figure \ref{fig:votes_excalibur_1} shows a different representation of the same data. In blue is 1 - the derivative of the tpr. In orange 1 - the derivative of the fpr. \textcolor{gray}{(I finally understood that the histogram that we have been looking at are just that. Maybe just plot the standart tpr and fpr? It is much easier to explain.)}
   % Old Explanation. the histogram of the number of segments in a word that voted against anomaly. The histogram is normalized, so that the surface under the graph is one. We plot two separate graphs, one for each of the ground truth labels.
   To compare, \ref{fig:tpr_fpr_h20_p2} and \ref{fig:votes_holt_20} are the same graphs for h20 as a guarded transmitter and p2 as a receiver. It is apparant that this is a more challanging case.
   
